--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 # .env.production
 # VITE_API_URL=https://api.example.com
 VITE_DEBUG=false
-VITE_IMAGES_URL = './heroes'
+VITE_IMAGES_URL = 'heroes'
