--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "heroes-spa",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "animate.css": "^4.1.1",
@@ -22,6 +23,8 @@
   "devDependencies": {
     "@babel/preset-env": "^7.23.6",
     "@babel/preset-react": "^7.23.3",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
@@ -31,7 +34,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "vite": "^5.0.0",
-    "vite-plugin-static-copy": "^1.0.0"
+    "vite-plugin-environment": "^1.1.3",
+    "vite-plugin-static-copy": "^1.0.0",
+    "whatwg-fetch": "^3.6.20"
   }
 }
